--- a/index.html
+++ b/index.html
@@ -117,39 +117,53 @@
       </div>
     </section>
 
-    <section id="framework" class="bg-neutral-950 py-32 px-6 text-white overflow-hidden relative">
+        <section id="framework" class="bg-neutral-950 py-32 px-6 text-white overflow-hidden relative">
       <div class="absolute top-0 right-0 w-1/2 h-full bg-brand-600/10 blur-[160px] rounded-full pointer-events-none"></div>
       <div class="max-w-6xl mx-auto grid lg:grid-cols-2 gap-24 items-center relative z-10">
-        <div class="space-y-16 reveal-on-scroll">
-          <div class="space-y-4">
+        
+        <div class="space-y-20 reveal-on-scroll">
+          <div class="space-y-4 text-center lg:text-left">
             <h2 class="text-4xl lg:text-5xl font-semibold tracking-tight">The 3-Pillar Framework</h2>
-            <p class="text-neutral-400 text-lg max-w-md">Our methodology for high-ticket service positioning.</p>
+            <p class="text-neutral-400 text-lg max-w-md mx-auto lg:mx-0">Our methodology for high-ticket service positioning.</p>
           </div>
-          <div class="space-y-12">
-            <div class="flex gap-6 group items-start">
-              <img src="assets/images/illustrations/pillar-clarity.svg" alt="Clarity Illustration" class="w-16 h-16 object-contain illustration-spot flex-shrink-0">
+
+          <div class="space-y-16">
+            <div class="flex flex-col lg:flex-row gap-8 lg:gap-6 group items-center lg:items-start text-center lg:text-left">
+              <div class="relative flex-shrink-0">
+                  <div class="absolute inset-0 bg-brand-500/20 blur-[40px] rounded-full opacity-0 group-hover:opacity-100 transition-opacity duration-500"></div>
+                  <img src="assets/images/illustrations/pillar-clarity.svg" alt="Clarity Illustration" class="w-48 h-48 lg:w-24 lg:h-24 object-contain illustration-spot relative z-10 drop-shadow-2xl">
+              </div>
               <div>
-                <h3 class="text-xl font-bold mb-3 tracking-tight group-hover:text-brand-500 transition-colors">01. Clarity</h3>
-                <p class="text-neutral-400 leading-relaxed font-normal max-w-sm">If your prospect can't articulate your value in one sentence, you haven't explained it yet.</p>
+                <h3 class="text-2xl font-bold mb-4 tracking-tight group-hover:text-brand-500 transition-colors">01. Clarity</h3>
+                <p class="text-neutral-400 leading-relaxed font-normal max-w-sm mx-auto lg:mx-0 text-lg">If your prospect can't articulate your value in one sentence, you haven't explained it yet.</p>
               </div>
             </div>
-            <div class="flex gap-6 group items-start">
-              <img src="assets/images/illustrations/pillar-credibility.svg" alt="Credibility Illustration" class="w-16 h-16 object-contain illustration-spot flex-shrink-0">
+
+            <div class="flex flex-col lg:flex-row gap-8 lg:gap-6 group items-center lg:items-start text-center lg:text-left">
+              <div class="relative flex-shrink-0">
+                  <div class="absolute inset-0 bg-brand-500/20 blur-[40px] rounded-full opacity-0 group-hover:opacity-100 transition-opacity duration-500"></div>
+                  <img src="assets/images/illustrations/pillar-credibility.svg" alt="Credibility Illustration" class="w-48 h-48 lg:w-24 lg:h-24 object-contain illustration-spot relative z-10 drop-shadow-2xl">
+              </div>
               <div>
-                <h3 class="text-xl font-bold mb-3 tracking-tight group-hover:text-brand-500 transition-colors">02. Credibility</h3>
-                <p class="text-neutral-400 leading-relaxed font-normal max-w-sm">Authority is earned through precision. We replace generic claims with undeniable proof of expertise.</p>
+                <h3 class="text-2xl font-bold mb-4 tracking-tight group-hover:text-brand-500 transition-colors">02. Credibility</h3>
+                <p class="text-neutral-400 leading-relaxed font-normal max-w-sm mx-auto lg:mx-0 text-lg">Authority is earned through precision. We replace generic claims with undeniable proof of expertise.</p>
               </div>
             </div>
-            <div class="flex gap-6 group items-start">
-               <img src="assets/images/illustrations/pillar-conviction.svg" alt="Conviction Illustration" class="w-16 h-16 object-contain illustration-spot flex-shrink-0">
+
+            <div class="flex flex-col lg:flex-row gap-8 lg:gap-6 group items-center lg:items-start text-center lg:text-left">
+               <div class="relative flex-shrink-0">
+                  <div class="absolute inset-0 bg-brand-500/20 blur-[40px] rounded-full opacity-0 group-hover:opacity-100 transition-opacity duration-500"></div>
+                  <img src="assets/images/illustrations/pillar-conviction.svg" alt="Conviction Illustration" class="w-48 h-48 lg:w-24 lg:h-24 object-contain illustration-spot relative z-10 drop-shadow-2xl">
+               </div>
               <div>
-                <h3 class="text-xl font-bold mb-3 tracking-tight group-hover:text-brand-500 transition-colors">03. Conviction</h3>
-                <p class="text-neutral-400 leading-relaxed font-normal max-w-sm">We don't sell features. We sell the inevitable outcome your clients are searching for.</p>
+                <h3 class="text-2xl font-bold mb-4 tracking-tight group-hover:text-brand-500 transition-colors">03. Conviction</h3>
+                <p class="text-neutral-400 leading-relaxed font-normal max-w-sm mx-auto lg:mx-0 text-lg">We don't sell features. We sell the inevitable outcome your clients are searching for.</p>
               </div>
             </div>
           </div>
         </div>
-        <div class="bg-neutral-900/40 p-16 rounded-[3rem] border border-neutral-800 backdrop-blur-xl reveal-on-scroll animate-float-medium">
+
+        <div class="bg-neutral-900/40 p-16 rounded-[3rem] border border-neutral-800 backdrop-blur-xl reveal-on-scroll animate-float-medium hidden lg:block">
           <div class="text-[10px] font-bold text-neutral-500 uppercase tracking-[0.2em] mb-12 text-center">The Perception Benchmark</div>
           <div class="flex items-end gap-16 h-72 relative">
             <div class="flex-1 flex flex-col items-center group">
@@ -164,6 +178,7 @@
             </div>
           </div>
         </div>
+
       </div>
     </section>
 
