--- a/index.html
+++ b/index.html
@@ -77,6 +77,7 @@
         <div class="hidden md:flex gap-8 text-sm font-medium text-neutral-500 uppercase tracking-widest">
           <button onclick="switchView('landing')" class="hover:text-neutral-900 transition-colors">Framework</button>
           <button onclick="switchView('strategy')" class="hover:text-neutral-900 transition-colors">Strategy Sim</button>
+          <a href="https://pennio-design.github.io/portfolio.pdf" target="_blank" class="hover:text-neutral-900 transition-colors">Portfolio</a>
         </div>
         <a href="#apply" onclick="switchView('landing')" class="bg-neutral-900 text-white text-[10px] font-black px-6 py-3 rounded-xl hover:bg-brand-600 transition-all shadow-xl active:scale-95 tracking-[0.1em]">
           FREE DIAGNOSIS
@@ -117,7 +118,7 @@
       </div>
     </section>
 
-        <section id="framework" class="bg-neutral-950 py-32 px-6 text-white overflow-hidden relative">
+    <section id="framework" class="bg-neutral-950 py-32 px-6 text-white overflow-hidden relative">
       <div class="absolute top-0 right-0 w-1/2 h-full bg-brand-600/10 blur-[160px] rounded-full pointer-events-none"></div>
       <div class="max-w-6xl mx-auto grid lg:grid-cols-2 gap-24 items-center relative z-10">
         
@@ -307,6 +308,7 @@
       <div class="flex gap-12 text-xs font-bold uppercase tracking-widest text-neutral-500">
         <button onclick="switchView('landing')" class="hover:text-brand-600 transition-colors">Framework</button>
         <button onclick="switchView('strategy')" class="hover:text-brand-600 transition-colors">Strategy</button>
+        <a href="https://pennio-design.github.io/portfolio.pdf" target="_blank" class="hover:text-brand-600 transition-colors">Portfolio</a>
       </div>
       <div class="text-[10px] font-bold uppercase tracking-[0.2em]">&copy; 2026 THE PENNIO AGENCY</div>
     </div>
